--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 			<a href="rights.html">Direitos</a>
             <a href="challenges.html">Desafios</a>
 			<a href="about.html">Sobre</a>
-            <a class="link" href="https://xdalle.github.io/5L2FGuide/about.html">EN</a>
+            <a class="link" href="https://anonymous.4open.science/w/5L2FGuide-2AB0/about.html">EN</a>
 		</nav>
     </header>
 
@@ -34,14 +34,8 @@
         <section class="introduction"></section>
             <h2 class="intro-title" id="introduction">Sobre</h2>
             <p class="intro-paragraph">
-                <p>Guia desenvolvido por Lucas Dalle Rocha (<a href="https://orcid.org/0000-0002-8512-236X">https://orcid.org/0000-0002-8512-236X</a>), orientado pela Prof.ª Dr.ª Edna Dias Canedo (<a href="https://orcid.org/0000-0002-2159-339X">https://orcid.org/0000-0002-2159-339X</a>), como resultado da pesquisa no Mestrado Acadêmico no Programa de Pós-Graduação em Informática (PPGI) da Universidade de Brasília (UnB).</p>
-                <p>O código-fonte do Guia está disponível em <a href="https://github.com/xDalle/5L2FGuide-PT-BR">https://github.com/xDalle/5L2FGuide-PT-BR</a> sob a licença GNU GPLv3, ou seja, permite que as funcionalidades sejam ajustadas e que princípios e direitos adicionais sejam incorporados, dependendo das necessidades da equipe de desenvolvimento para alcançar a conformidade.</p>                
+                <p>O código-fonte do Guia está disponível em <a href="https://github.com/xDalle/5L2FGuideAnonBR">https://github.com/xDalle/5L2FGuideAnonBR</a> sob a licença GNU GPLv3, ou seja, permite que as funcionalidades sejam ajustadas e que princípios e direitos adicionais sejam incorporados, dependendo das necessidades da equipe de desenvolvimento para alcançar a conformidade.</p>                
         </section>
-
-        <br>
-        <h2 class="notintro-title" id="introduction">Contato</h2>
-        <p><strong>Lucas Dalle Rocha</strong> (<a href="mailto:dalle.lucas@aluno.unb.br">dalle.lucas@aluno.unb.br</a>)</p>     
-        <p><strong>Edna Dias Canedo</strong> (<a href="mailto:ednacanedo@unb.br">ednacanedo@unb.br</a>)</p>  
         
         <br>
         <h2 class="notintro-title" id="introduction">Exemplo em execução</h2>
@@ -84,8 +78,6 @@
         <p><a href="https://cppa.ca.gov/regulations/pdf/cppa_act.pdf">State of California, Department of Justice: California Consumer Privacy Act (CCPA), 2018.</a></p>
         <p>Cavoukian, Ann: Privacy by design, 2009.</p>
         <p>Secretary, ISO Central: ISO/IEC 29100 : Information technology — security techniques — privacy framework. Standard, International Organization for Standardization, Geneva, CH, 2011.</p>
-        <p><a href="https://doi.org/10.5281/zenodo.11398181">Dalle Rocha, Lucas e Edna Dias Canedo: Supplementary Material for Comparative Analysis of Data Protection Laws and Privacy Frameworks: Optimizing Solutions for Compliance with LGPD and International Data Sharing Laws, 2024.</a></p>
-
     </main>
 
     <footer class="footer">
@@ -95,7 +87,7 @@
             A menos que indicado de outra forma, o conteúdo está licenciado sob
             <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 &#8211; Internacional</a>.
             Os autores são responsáveis pela escolha e apresentação de seus textos neste site e pelas opiniões expressas.
-            <a class="link" href="https://github.com/xDalle/5L2FGuide-PT-BR-">Fonte</a>.
+            <a class="link" href="https://github.com/xDalle/5L2FGuideAnonBR">Fonte</a>.
         </p>
     </footer>
 
