--- a/definitions.html
+++ b/definitions.html
@@ -18,7 +18,7 @@
 			<a href="rights.html">Direitos</a>
             <a href="challenges.html">Desafios</a>
 			<a href="about.html">Sobre</a>
-			<a class="link" href="https://xdalle.github.io/5L2FGuide/definitions.html">EN</a>
+			<a class="link" href="https://anonymous.4open.science/w/5L2FGuide-2AB0/definitions.html">EN</a>
 		</nav>
     </header>
 
@@ -131,6 +131,6 @@
             A menos que indicado de outra forma, o conteúdo está licenciado sob
             <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 &#8211; Internacional</a>.
             Os autores são responsáveis pela escolha e apresentação de seus textos neste site e pelas opiniões expressas.
-            <a class="link" href="https://github.com/xDalle/5L2FGuide-PT-BR-">Fonte</a>.
+            <a class="link" href="https://github.com/xDalle/5L2FGuideAnonBR">Fonte</a>.
         </p>
     </footer>
